# ap1-backend-fastapi-ditko-br

./: .env.example  .gitignore  README.md  app.py  bootstrap.py  cmd.sh  conftest.py  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
devolucao/: .dockerignore  Dockerfile  main.py
devolucao/tests/integration/: conftest.py  test_devolucao_api.py  test_devolucao_end_to_end.py  test_devolucao_repository.py  test_item_event_consumer.py
devolucao/tests/unit/: test_devolucao_entity.py  test_devolucao_schema.py  test_devolucao_use_cases.py
docs/: ARQUITETURA.md  CHANGELOG.md  DOCKER.md  ENTIDADE-DEVOLUCAO-KAFKA.md  ENTIDADE-DEVOLUCAO.md  ENTIDADE-ITEM-KAFKA.md  ENTIDADE-ITEM.md  ENTIDADE-LOCAL-KAFKA.md  ENTIDADE-LOCAL.md  ENTIDADE-RECLAMANTE-KAFKA.md  ENTIDADE-RECLAMANTE.md  ENTIDADE-RESPONSAVEL-KAFKA.md  ENTIDADE-RESPONSAVEL.md  KAFKA.md  TESTS.md
item/: Dockerfile  main.py
item/tests/integration/: __init__.py  conftest.py  test_devolucao_event_consumer.py  test_item_api.py  test_item_end_to_end.py  test_item_repository.py
item/tests/unit/: __init__.py  test_item_entity.py  test_item_exceptions.py  test_item_performance.py  test_item_schema.py  test_item_use_cases.py
local/: Dockerfile  main.py
local/tests/integration/: __init__.py  conftest.py  test_item_event_consumer.py  test_local_api.py  test_local_end_to_end.py  test_local_repository.py
local/tests/unit/: __init__.py  test_local_entity.py  test_local_schema.py  test_local_use_cases.py
reclamante/: Dockerfile  main.py
reclamante/tests/integration/: conftest.py  test_devolucao_event_consumer.py  test_item_event_consumer.py  (+4 more)
responsavel/: Dockerfile  __init__.py  main.py
tests/integration/: test_kafka_messaging.py  test_kafka_producers.py
(+112 files in other folders)
