[project]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = [
    {name = "Ryanditko",email = "yryurodriguess@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard] (>=0.128.7,<0.129.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
