[tool.poetry]
name = "lostfound"
version = "0.1.0"
description = "Sistema de Achados e Perdidos"
authors = ["Ryanditko <yryurodriguess@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.0"}
sqlalchemy = "^2.0.0"
aiosqlite = "^0.19.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
uvicorn = "^0.41.0"
aiokafka = "^0.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
httpx = "^0.27.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
